fixed image stretch

--- a/pages/lectures/lec1.module.css
+++ b/pages/lectures/lec1.module.css
@@ -83,7 +83,7 @@
 
 .pic1 {
   width: 100%;
-  height: 310px;
+  /* height: 310px; */
   /* float: left; */
   /* margin: 1.56rem; */
   /* animation: 2s moveDown;
